# anomaly-detection

./: .gitignore  pyproject.toml
logs/: constant.py  logs_generator.py
